<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.svalero.toteco_app_aa2.view.HomeFragment"
        android:label="@string/nav_publications"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_add_publication"
        android:name="com.svalero.toteco_app_aa2.view.AddPublicationFragment"
        android:label="@string/nav_add_publication"
        tools:layout="@layout/fragment_add_publication" />

    <fragment
        android:id="@+id/nav_locations"
        android:name="com.svalero.toteco_app_aa2.view.LocationsFragment"
        android:label="@string/nav_locations"
        tools:layout="@layout/fragment_locations" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.svalero.toteco_app_aa2.view.LocationsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_locations" />
</navigation>